commit #2 attempting to fix on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,3 +79,7 @@ p {
   color: hsl(var(--muted-foreground));
   font-family: var(--font-inter-sans), sans-serif;
 }
+
+html, body {
+  overflow-x: hidden;
+}
